--- a/실습_basic_classification.ipynb
+++ b/실습_basic_classification.ipynb
@@ -35,72 +35,7 @@
         "id": "jYysdyb-CaWM"
       },
       "source": [
-        "# Classification"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rs0FhymRk-uJ",
-        "colab_type": "text"
-      },
-      "source": [
-        "# 새 섹션"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "r4WEkSxAmwW-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Kq1YHhWTmwwo",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UVX5tdYamw-a",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aJjNjjy3Zbz0",
-        "colab_type": "text"
-      },
-      "source": [
-        "Note: 이 문서는 텐서플로 커뮤니티에서 번역했습니다. 커뮤니티 번역 활동의 특성상 정확한 번역과 최신 내용을 반영하기 위해 노력함에도\n",
-        "불구하고 [공식 영문 문서](https://www.tensorflow.org/?hl=en)의 내용과 일치하지 않을 수 있습니다.\n",
-        "이 번역에 개선할 부분이 있다면\n",
-        "[tensorflow/docs](https://github.com/tensorflow/docs) 깃헙 저장소로 풀 리퀘스트를 보내주시기 바랍니다.\n",
-        "문서 번역이나 리뷰에 참여하려면\n",
-        "[docs-ko@tensorflow.org](https://groups.google.com/a/tensorflow.org/forum/#!forum/docs-ko)로\n",
-        "메일을 보내주시기 바랍니다."
+        "# Classification Problem"
       ]
     },
     {
@@ -110,9 +45,18 @@
         "id": "FbVhjPpzn6BM"
       },
       "source": [
-        "이 튜토리얼에서는 운동화나 셔츠 같은 옷 이미지를 분류하는 신경망 모델을 훈련합니다. 상세 내용을 모두 이해하지 못해도 괜찮습니다. 여기서는 완전한 텐서플로(TensorFlow) 프로그램을 빠르게 살펴 보겠습니다. 자세한 내용은 앞으로 배우면서 더 설명합니다.\n",
-        "\n",
+        "이 튜토리얼에서는 운동화나 셔츠 같은 옷 이미지를 분류하는 신경망 모델을 훈련합니다. \n",
         "여기에서는 텐서플로 모델을 만들고 훈련할 수 있는 고수준 API인 [tf.keras](https://www.tensorflow.org/guide/keras)를 사용합니다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2B1lc3GHsloz",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 필요 라이브러리 임포트"
       ]
     },
     {
@@ -155,7 +99,7 @@
         "id": "DLdCchMdCaWQ"
       },
       "source": [
-        "10개의 범주(category)와 70,000개의 흑백 이미지로 구성된 [패션 MNIST](https://github.com/zalandoresearch/fashion-mnist) 데이터셋을 사용하겠습니다. 이미지는 해상도(28x28 픽셀)가 낮고 다음처럼 개별 옷 품목을 나타냅니다:\n",
+        "10개의 category 와 70,000개의 흑백 이미지로 구성된 [패션 MNIST](https://github.com/zalandoresearch/fashion-mnist) 데이터셋을 사용하겠습니다. 이미지는 해상도(28x28 픽셀)가 낮고 다음처럼 개별 옷 품목을 나타냅니다:\n",
         "\n",
         "<table>\n",
         "  <tr><td>\n",
@@ -167,11 +111,7 @@
         "  </td></tr>\n",
         "</table>\n",
         "\n",
-        "패션 MNIST는 컴퓨터 비전 분야의 \"Hello, World\" 프로그램격인 고전 [MNIST](http://yann.lecun.com/exdb/mnist/) 데이터셋을 대신해서 자주 사용됩니다. MNIST 데이터셋은 손글씨 숫자(0, 1, 2 등)의 이미지로 이루어져 있습니다. 여기서 사용하려는 옷 이미지와 동일한 포맷입니다.\n",
-        "\n",
-        "패션 MNIST는 일반적인 MNIST 보다 조금 더 어려운 문제이고 다양한 예제를 만들기 위해 선택했습니다. 두 데이터셋은 비교적 작기 때문에 알고리즘의 작동 여부를 확인하기 위해 사용되곤 합니다. 코드를 테스트하고 디버깅하는 용도로 좋습니다.\n",
-        "\n",
-        "네트워크를 훈련하는데 60,000개의 이미지를 사용합니다. 그다음 네트워크가 얼마나 정확하게 이미지를 분류하는지 10,000개의 이미지로 평가하겠습니다. 패션 MNIST 데이터셋은 텐서플로에서 바로 임포트하여 적재할 수 있습니다:"
+        "네트워크를 훈련하는데 60,000 개의 이미지를 사용합니다. 그다음 네트워크가 얼마나 정확하게 이미지를 분류하는지 10,000 개의 이미지로 평가하겠습니다. 패션 MNIST 데이터셋은 텐서플로에서 바로 임포트하여 로드할 수 있습니다:"
       ]
     },
     {
@@ -276,7 +216,7 @@
       "source": [
         "## 데이터 탐색\n",
         "\n",
-        "모델을 훈련하기 전에 데이터셋 구조를 살펴보죠. 다음 코드는 훈련 세트에 60,000개의 이미지가 있다는 것을 보여줍니다. 각 이미지는 28x28 픽셀로 표현됩니다:"
+        "모델을 훈련하기 전에 데이터셋 구조를 살펴보죠."
       ]
     },
     {
@@ -295,11 +235,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "cIAcvQqMCaWf"
+        "id": "opFIwpCruJR_",
+        "colab_type": "text"
       },
       "source": [
-        "비슷하게 훈련 세트에는 60,000개의 레이블이 있습니다:"
+        "몇 개의 훈련용 이미지가 있나요?"
       ]
     },
     {
@@ -345,7 +285,7 @@
         "id": "TMPI88iZpO2T"
       },
       "source": [
-        "테스트 세트에는 10,000개의 이미지가 있습니다. 이 이미지도 28x28 픽셀로 표현됩니다:"
+        "테스트 세트에는 몇 개의 이미지가 있나요 ?"
       ]
     },
     {
@@ -368,7 +308,7 @@
         "id": "rd0A0Iu0CaWq"
       },
       "source": [
-        "테스트 세트는 10,000개의 이미지에 대한 레이블을 가지고 있습니다:"
+        "테스트 세트에는 몇 개의 이미지가 있나요 ?"
       ]
     },
     {
@@ -393,7 +333,7 @@
       "source": [
         "## 데이터 전처리\n",
         "\n",
-        "네트워크를 훈련하기 전에 데이터를 전처리해야 합니다. 훈련 세트에 있는 첫 번째 이미지를 보면 픽셀 값의 범위가 0~255 사이라는 것을 알 수 있습니다:"
+        "네트워크를 훈련하기 전에 데이터를 전처리해야 합니다. 훈련 세트에 있는 첫 번째 이미지를 보죠."
       ]
     },
     {
@@ -490,9 +430,7 @@
       "source": [
         "### 층 설정\n",
         "\n",
-        "신경망의 기본 구성 요소는 *층*(layer)입니다. 층은 주입된 데이터에서 표현을 추출합니다. 아마도 문제를 해결하는데 더 의미있는 표현이 추출될 것입니다.\n",
-        "\n",
-        "대부분 딥러닝은 간단한 층을 연결하여 구성됩니다. `tf.keras.layers.Dense`와 같은 층들의 가중치(parameter)는 훈련하는 동안 학습됩니다."
+        "신경망의 기본 구성 요소는 *층*(layer)입니다. `tf.keras.layers.Dense`와 같은 층들의 parameter 는 훈련하는 동안 학습됩니다."
       ]
     },
     {
@@ -519,7 +457,7 @@
         "id": "gut8A_7rCaW6"
       },
       "source": [
-        "이 네트워크의 첫 번째 층인 `tf.keras.layers.Flatten`은 2차원 배열(28 x 28 픽셀)의 이미지 포맷을 28 * 28 = 784 픽셀의 1차원 배열로 변환합니다. 이 층은 이미지에 있는 픽셀의 행을 펼쳐서 일렬로 늘립니다. 이 층에는 학습되는 가중치가 없고 데이터를 변환하기만 합니다.\n",
+        "이 네트워크의 첫 번째 층인 `tf.keras.layers.Flatten`은 2차원 배열(28 x 28 픽셀)의 이미지 포맷을 28 * 28 = 784 픽셀의 1차원 배열로 변환합니다. 이 층은 이미지에 있는 픽셀의 행을 펼쳐서 일렬로 늘립니다. 이 층에는 학습되는 parameter 없고 데이터를 변환하기만 합니다.\n",
         "\n",
         "픽셀을 펼친 후에는 두 개의 `tf.keras.layers.Dense` 층이 연속되어 연결됩니다. 이 층을 밀집 연결(densely-connected) 또는 완전 연결(fully-connected) 층이라고 부릅니다. 첫 번째 `Dense` 층은 128개의 노드(또는 뉴런)를 가집니다. 두 번째 (마지막) 층은 10개의 노드의 *소프트맥스*(softmax) 층입니다. 이 층은 10개의 확률을 반환하고 반환된 값의 전체 합은 1입니다. 각 노드는 현재 이미지가 10개 클래스 중 하나에 속할 확률을 출력합니다.\n",
         "\n",
@@ -852,132 +790,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "R32zteKHCaXT"
-      },
-      "source": [
-        "마지막으로 훈련된 모델을 사용하여 한 이미지에 대한 예측을 만듭니다."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "yRJ7JU7JCaXT",
-        "colab": {}
-      },
-      "source": [
-        "# 테스트 세트에서 이미지 하나를 선택합니다\n",
-        "img = test_images[0]\n",
-        "\n",
-        "print(img.shape)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "vz3bVp21CaXV"
-      },
-      "source": [
-        "`tf.keras` 모델은 한 번에 샘플의 묶음 또는 *배치*(batch)로 예측을 만드는데 최적화되어 있습니다. 하나의 이미지를 사용할 때에도 2차원 배열로 만들어야 합니다:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "lDFh5yF_CaXW",
-        "colab": {}
-      },
-      "source": [
-        "# 이미지 하나만 사용할 때도 배치에 추가합니다\n",
-        "img = (np.expand_dims(img,0))\n",
-        "\n",
-        "print(img.shape)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "EQ5wLTkcCaXY"
-      },
-      "source": [
-        "이제 이 이미지의 예측을 만듭니다:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "o_rzNSdrCaXY",
-        "colab": {}
-      },
-      "source": [
-        "predictions_single = model.predict(img)\n",
-        "\n",
-        "print(predictions_single)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "6Ai-cpLjO-3A",
-        "colab": {}
-      },
-      "source": [
-        "plot_value_array(0, predictions_single, test_labels)\n",
-        "plt.xticks(range(10), class_names, rotation=45)\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "cU1Y2OAMCaXb"
-      },
-      "source": [
-        "`model.predict`는 2차원 넘파이 배열을 반환하므로 첫 번째 이미지의 예측을 선택합니다:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "2tRmdq_8CaXb",
-        "colab": {}
-      },
-      "source": [
-        "prediction_result = np.argmax(predictions_single[0])\n",
-        "print(prediction_result)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "YFc2HbEVCaXd"
-      },
-      "source": [
-        "이전과 마찬가지로 모델의 예측은 레이블 9입니다."
-      ]
     }
   ]
 }
